--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         <div class="action-buttons">
             <button id="resetProgress" class="btn btn-secondary">Reset All Progress</button>
             <button id="exportData" class="btn btn-primary">Export Progress</button>
+            <button id="resetPin" class="btn btn-secondary" style="background: #e74c3c;">Reset PIN</button>
         </div>
     </div>
 
@@ -68,6 +69,7 @@
     </div>
 
     <script src="exercise_instructions.js"></script>
+    <script src="auth.js"></script>
     <script src="script_13weeks.js"></script>
 </body>
 </html>
