Add cache-busting query strings to force fresh script loads

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
         </div>
     </div>
 
-    <script src="exercise_instructions.js"></script>
-    <script src="auth.js"></script>
-    <script src="script_13weeks.js"></script>
+    <script src="exercise_instructions.js?v=2.0"></script>
+    <script src="auth.js?v=2.0"></script>
+    <script src="script_13weeks.js?v=2.0"></script>
 </body>
 </html>
